# report-service

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/consumer/: base_consumer.py  report_consumer.py
src/core/: logger.py  settings.py
src/scripts/: producer.py
src/services/: cache_repository.py  report_service.py
