[tool.poetry]
name = "report-service"
version = "0.1.0"
description = ""
authors = ["Слепцов Виктор <slepzov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aio-pika = "^9.4.3"
structlog = "^24.4.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.1"
ijson = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
